<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <GVL Name="Analytics" Id="61142de6-ee99-43c0-8b13-a1ea36c4e43b">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//DataSources
	//Live:
	fbT1_InputSource: FB_T1_InputSource;
	//Historical:
	//Empty:
	
	fbT1_IecCriticalSection: FB_IecCriticalSection;
	
	//Historical DataSource parameter
	nHistMaxInputBuffer: UDINT := 100;
	nHistMaxSampleCount: UDINT := 100;
	
	stReset: ST_AnalysisReset;
	
	//Scope ADS Push Target NetID
	sScopeServerNetID: T_AmsNetID := '10.123.65.55.1.1';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>