<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <POU Name="MAIN_Analytics_C1" Id="7c1444cf-f61b-4f8c-82ea-17a19802ba15" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN_Analytics_C1
VAR_INPUT
	stReset: ST_AnalysisReset;
END_VAR
VAR_OUTPUT
	bError: BOOL;
	ipTcResult: I_TcMessage;
END_VAR
VAR
	nHMIUpdateState: INT;
	bHMIReinit: BOOL := TRUE;
	bHMIResetReinit: BOOL;
	bHMIReinitDone: BOOL;
	
	fbV1_C1_VirtualInputSource: FB_V1_C1_VirtualInputSource(fbSource:= Analytics.fbT1_InputSource);
	
	fbAnalysis: FB_Analysis := ( nConfigurationID:= 1, 
								ipVirtualInputSource:= fbV1_C1_VirtualInputSource );
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[A_Reset();

fbV1_C1_VirtualInputSource.SourceSync();

IF NOT fbV1_C1_VirtualInputSource.bEndOfData THEN

	WHILE NOT fbV1_C1_VirtualInputSource.bEndOfData DO

		fbV1_C1_VirtualInputSource.NextData(1);

		fbAnalysis.Call();

	END_WHILE

ELSE
	fbAnalysis.Call();
END_IF

fbV1_C1_VirtualInputSource.Done();

//Error Handling
bError:= fbAnalysis.bError;
ipTcResult:= fbAnalysis.ipTcResult;


//Map HMI Current Timestamp
AnalyticsHMI.stHMI_DataSourceConfig[0].aInputSources[0].eState:= fbV1_C1_VirtualInputSource.fbInputSource.eDataState;
AnalyticsHMI.stHMI_DataSourceConfig[0].aInputSources[0].dtTimestamp:= fbV1_C1_VirtualInputSource.dtTimestamp;]]></ST>
    </Implementation>
    <Action Name="A_Reset" Id="1b0630b5-bd44-426e-89e9-60f8da126b37">
      <Implementation>
        <ST><![CDATA[
//Reset Analytics Components
fbAnalysis.Reset(stReset);

Analytics.stReset.bResetExecute:= FALSE;]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_MapToHMI" Id="c66086bc-3c82-41a2-81ca-559882e83d86">
      <Implementation>
        <ST><![CDATA[
//Map In-/Outputs of the Analysis to HMI Structs
CASE nHMIUpdateState OF
	0:
		bHMIReinit:= bHMIReinit OR fbAnalysis.GetHMIValues(1, ADR(AnalyticsHMI.stHMI_C1_Network));
		bHMIReinitDone:= fbAnalysis.SetHMIValues(1, ADR(AnalyticsHMI.stHMI_C1_Network), bHMIReinit);
		nHMIUpdateState:= 1;
	1:
		AnalyticsHMI.bV1_bProductionMode:= fbV1_C1_VirtualInputSource.bV1_bProductionMode;
		AnalyticsHMI.nV1_lScheduledTime:= fbV1_C1_VirtualInputSource.nV1_lScheduledTime;
		AnalyticsHMI.nV1_uProcessedCount:= fbV1_C1_VirtualInputSource.nV1_uProcessedCount;
		AnalyticsHMI.nV1_uDefectiveCount:= fbV1_C1_VirtualInputSource.nV1_uDefectiveCount;
		AnalyticsHMI.nV1_uMetalCount:= fbV1_C1_VirtualInputSource.nV1_uMetalCount;
		nHMIUpdateState:= 2;
	2:
		IF bHMIResetReinit THEN
			bHMIResetReinit:= FALSE;
			bHMIReinit:= FALSE;
		END_IF

		IF bHMIReinitDone THEN
			bHMIResetReinit:= TRUE;
		END_IF

		nHMIUpdateState:= 0;
END_CASE]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>